[project]
name = "sal-ty"
version = "0.1.0"
description = "salty project. perfect. awesome."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.7.5",
    "notebook>=7.3.3",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "streetlevel>=0.12.5",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.3",
]
